--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp -R ./src/templates ./dist/templates",
     "dev": "nodemon -w *.ts -e ts -x ts-node --files -H -T ./src/index.ts",
     "lint": "eslint --ext .js,.ts .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "test": "vitest"
+    "test": "vitest",
+    "plop": "plop"
   },
   "dependencies": {
     "typescript": "^4.8.4"
@@ -34,7 +35,9 @@
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
+    "node-plop": "^0.31.0",
     "nodemon": "^2.0.20",
+    "plop": "^3.1.1",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "vite": "^3.2.3",
