--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
   "scripts": {
-    "build": "tsc && cp -R ./src/templates ./dist/templates",
+    "build": "tsc && cp -R ./src/templates ./dist",
     "dev": "nodemon -w *.ts -e ts -x ts-node --files -H -T ./src/index.ts",
     "lint": "eslint --ext .js,.ts .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
