--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
         run: npm ci
       - name: '🧪 Run Tests'
         run: npm run test
+      - name: '🔨 Build'
+        run: npm run build
       - name: '🚀 Publish to NPM'
         run: npm publish --access public
         env:
